--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
+    
+    <!-- Disable favicon -->
+    <link rel="icon" href="data:,">
   </head>
 
   <body>
